--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -98,6 +98,10 @@
 				    	<dd data-magellan-arrival="hamburger"><a href="#hamburger">Hamburger</a></dd>
 				    	<dd data-magellan-arrival="carne"><a href="#carne">Carni</a><dd
 				    	<dd data-magellan-arrival="dolce"><a href="#dolce">Dolci</a></dd>
+				    	<dd data-magellan-arrival="stuzzicare"><a href="#stuzzicare">Per Stuzzicare</a></dd>
+				    	<dd data-magellan-arrival="hamburger"><a href="#hamburger">Hamburger</a></dd>
+				    	<dd data-magellan-arrival="carne"><a href="#carne">Carni</a><dd
+				    	<dd data-magellan-arrival="dolce"><a href="#dolce">Dolci</a></dd>
 				  	</dl>
 				</div>
 			</div>
