try bootstrap modal

--- a/asporto/bootstrap.html
+++ b/asporto/bootstrap.html
@@ -22,7 +22,10 @@
 	<meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/asporto-background.jpg"/>
 	<link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
 	<link rel="canonical" href="https://www.beerstrot.it/asporto/"/>
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/app.css"/>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" href="https://www.beerstrot.it/scss/stepper.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
@@ -159,6 +162,69 @@
 								</div>
 							</div>
 <!-- fine modale -->
+						</li>
+						<li>
+							<div class="row">
+								<div class="small-4 columns">
+									<img src="https://picsum.photos/150" class="extra-space-img-asporto">
+								</div>
+								<div class="small-8 columns">
+									<h3>Bootstrap modal<span class="price">5,9</span></h3>
+									<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa<small>Contiene: Glutine, Uova, Latte</small>
+									</p>
+
+
+							<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Aggiungi al carrello
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Bocconcini di Pollo</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <img src="https://www.beerstrot.it/asset/img/large/battuto-vitello.jpg" alt="">
+
+									<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa<br><small>Allergeni: Glutine, Uova, Latte</small>
+									</p>
+									<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa<br><small>Allergeni: Glutine, Uova, Latte</small>
+									</p>
+									<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa<br><small>Allergeni: Glutine, Uova, Latte</small>
+									</p>
+									<div class="extra-space-hero">
+										<label><strong>Note</strong>
+											<textarea maxlength="200" id="" placeholder=".........."></textarea>
+										</label>
+									</div>
+									<div class="extra-space-hero">
+										<label><strong>Cottura</strong>
+											<select>
+												<option value="medio">Media</option>
+												<option value="husker">Molto al sangue</option>
+												<option value="starbuck">Al sangue</option>
+												<option value="apollo">Ben cotta</option>
+											</select>
+										</label>
+									</div>
+								    <div class="counter extra-space left">
+										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+								      </div>
+								      <div class="modal-footer">
+								      	<div class="d-grid gap-2">
+								        	<button type="button" class="btn btn-primary d-grid gap-2 d-md-block">Aggiungi al carrello €5,5</button>
+								    	</div>
+								      </div>
+								    </div>
+								  </div>
+								</div>
 						</li>
 						<li>
 							<div class="row">
