--- a/asporto/bootstrap.html
+++ b/asporto/bootstrap.html
@@ -175,6 +175,7 @@
 
 
 							<!-- Button trigger modal -->
+
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Aggiungi al carrello
 </button>
@@ -218,9 +219,8 @@
 									</div>
 								      </div>
 								      <div class="modal-footer">
-								      	<div class="d-grid gap-2">
-								        	<button type="button" class="btn btn-primary d-grid gap-2 d-md-block">Aggiungi al carrello €5,5</button>
-								    	</div>
+								      	<a href="#" class="button expand" data-reveal-id="bocconcini">Aggiungi al carrello<span class="price"> € 5,9</span></a>
+								      	<br><br>
 								      </div>
 								    </div>
 								  </div>
