--- a/menu/index.html
+++ b/menu/index.html
@@ -371,7 +371,7 @@
 						</li>
 						<li>
 							<h3>Ape Regina</h3>
-							<p>Blonde ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
+							<p>Blonde Ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
 						</li>
 						<!-- <li>
 							<h3>Thee Bitter</h3>
