--- a/index.html
+++ b/index.html
@@ -87,16 +87,18 @@
 		</div>
 	</div> -->
 	<div class="panel-home-n">
-		 <!-- <div class="row">
+		 <div class="row">
 			<div class="medium-12 large-12 columns">
-				<h1>Chiusura festività</h1>
+
+				<!-- <h1>Chiusura festività</h1>
 				<p>Siamo chiusi fino al 4 Gennaio compreso.<br> Via aspettiamo Mercoledì 5 Gennaio.</p>
-				<p>Tanti Auguri di Buone Feste da tutti noi.<p>
+				<p>Tanti Auguri di Buone Feste da tutti noi.<p> -->
 			</div>
-		</div>  -->
+		</div>
 		<div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Orari</h1>
+				<p>Mercoledì 7 dicembre siamo aperti</p>
 			</div>
 		</div>
 		<div class="row">
