--- a/asporto/index.html
+++ b/asporto/index.html
@@ -206,7 +206,7 @@
 			</div>
 			<div class="row">
 				<div class="large-12 medium-12 small-12 columns">
-					<h2 class="subheader">Hamburger Stagionali<br><small>Hamburger da 180 grammi. serviti con patate fritte e a cottura media</small></h2>
+					<h2 class="subheader">Hamburger di stagione<br><small>Hamburger da 180 grammi. serviti con patate fritte e a cottura media</small></h2>
 					<ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
 						<li>
 							<h3>Autunno<span class="price">11,9 / doppio 15,9</span></h3>
