--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 		</div>
 	</div> -->
 	<div class="panel-home-n">
-		 <div class="row panel">
+		<!-- <div class="row panel">
 			<div class="medium-12 large-12 columns">
 				<h1>Chiusura festività</h1>
 				<p>Siamo chiusi fino al 4 Gennaio compreso.</p>
 				<p>Tanti Auguri di Buone Feste da tutti noi e che il 2023 porti a ciascuno gioia e felicità. Ci rivediamo Giovedì 5 Gennaio.<p>
 			</div>
-		</div>
+		</div> -->
 		<div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Orari</h1>
