--- a/menu/index.html
+++ b/menu/index.html
@@ -247,7 +247,7 @@
 							<h3>Greco<span class="price">10,5 / doppio 14,5</span></h3>
 							<p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki
 							<small>Contiene: Glutine, Latte, Uova</small></p>
-						</li>
+						</li> -->
 					   <!-- <li>
 							<h3>Norma<span class="price">11,9 / doppio 15,9</span></h3>
 							<p>Manzo, crema di melanzane e basilico, pomodorini confit, ricotta salata.
@@ -306,7 +306,7 @@
 							</li> -->
 							<li>
 								<h3>Cheesecake<span class="price">5</span></h3>
-								<p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula
+								<p>Cheesecake in stile new york. Squisitamente dolce, morbida e leggermente acidula
 								<small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
 							</li>
 							<li>
