orari san valentino

--- a/menu/index.html
+++ b/menu/index.html
@@ -694,7 +694,7 @@
 							<h3>Varnelli, Anisetta Meletti<span class="price">3,5</span></h3>
 						</li>
 						<li>
-							<h3>Fernet Branca, Brancamente, Montenegro, Amaro del Capo<span class="price">3,5</span></h3>
+							<h3>Fernet Branca, Brancamenta, Montenegro, Amaro del Capo<span class="price">3,5</span></h3>
 						</li>
 						<li>
 							<h3>Grappa Bianca 903<span class="price">3,5</span></h3>
