--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<div class="small-12 columns ">
 						<ul class="orari-schedule no-bullet">
 							<li><span>Lunedì:</span>chiuso</li>
-							<li><span>Martedì:</span>chiuso</li>
+							<li><span>Martedì:</span>19.00 - 22.00</li>
 							<li><span>Mercoledì:</span>chiuso</li>
 							<li><span>Giovedì:</span>19.00 - 22.00</li>
 							<li><span>Venerdì:</span>19.00 - 22.00</li>
@@ -228,7 +228,7 @@
 						<h4 class="subheader">Orari</h4>
 						<ul class="orari-footer-schedule no-bullet">
 							<li><span>Lunedì:</span>chiuso</li>
-							<li><span>Martedì:</span>chiuso</li>
+							<li><span>Martedì:</span>19 - 22</li>
 							<li><span>Mercoledì:</span>chiuso</li>
 							<li><span>Giovedì:</span>19 - 22</li>
 							<li><span>Venerdì:</span>19 - 22</li>
