--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<a role="button" href="https://www.beerstrot.it/covid/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-				<p>Siamo aperti dal Giovedì alla Domenica.</p><!-- <p>Il ristorante nel periodo estivo è aperto solo all'esterno.</p>
+				<p>Siamo aperti dal Giovedì alla Domenica.</p><p>Il ristorante nel periodo estivo è aperto solo all'esterno.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura (tramite email).</p>
 				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
 				<p>All'esterno è consentito fumare solo nell'area preposta lontano dai tavoli.</p>
@@ -106,7 +106,7 @@
 					<div class="small-12 columns ">
 						<ul class="orari-schedule no-bullet">
 							<li><span>Lunedì:</span>chiuso</li>
-							<li><span>Martedì:</span>19.00 - 22.00</li>
+							<li><span>Martedì:</span>chiuso</li>
 							<li><span>Mercoledì:</span>chiuso</li>
 							<li><span>Giovedì:</span>19.00 - 22.00</li>
 							<li><span>Venerdì:</span>19.00 - 22.00</li>
@@ -228,7 +228,7 @@
 						<h4 class="subheader">Orari</h4>
 						<ul class="orari-footer-schedule no-bullet">
 							<li><span>Lunedì:</span>chiuso</li>
-							<li><span>Martedì:</span>19 - 22</li>
+							<li><span>Martedì:</span>chiuso</li>
 							<li><span>Mercoledì:</span>chiuso</li>
 							<li><span>Giovedì:</span>19 - 22</li>
 							<li><span>Venerdì:</span>19 - 22</li>
