--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						<ul class="orari-schedule no-bullet">
 							<li><span>Lunedì:</span>chiuso</li>
 							<li><span>Martedì:</span>chiuso</li>
-							<li><span>Mercoledì:</span>chiuso</li>
+							<li><span>Mercoledì:</span>19.00 - 22.00</li>
 							<li><span>Giovedì:</span>19.00 - 22.00</li>
 							<li><span>Venerdì:</span>19.00 - 22.00</li>
 							<li><span>Sabato:</span>19.00 - 23.00</li>
@@ -131,7 +131,7 @@
 				<ul class="orari-schedule no-bullet">
 							<li><span>Lunedì:</span>chiuso</li>
 							<li><span>Martedì:</span>chiuso</li>
-							<li><span>Mercoledì:</span>chiuso</li>
+							<li><span>Mercoledì:</span>19.00 - 21.30</li>
 							<li><span>Giovedì:</span>19.00 - 21.30</li>
 							<li><span>Venerdì:</span>19.00 - 21.30</li>
 							<li><span>Sabato:</span>19.00 - 21.30</li>
