--- a/menu/index.html
+++ b/menu/index.html
@@ -352,24 +352,24 @@
 					<ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
 						<li>
 							<h3>Helles</h3>
-							<p>Bionda tedesca non amara 4,9% <br><em>Birrificio Gambrinus</em></p>
+							<p>Bionda tedesca non amara 4,9% <br><em>Birrificio Forst</em></p>
 						</li>
 						<!-- <li>
 							<h3>Italicum</h3>
 							<p>Bionda fruttata 5,0% <br><em>Birrificio dei Castelli</em></p>
 						</li> -->
-					        <!-- <li>
+					        <li>
 							<h3>Bock</h3>
 							<p>Rossa stile tedesco dolce 6,5% <br><em>Birrificio Forst</em></p>
-						</li> -->
+						</li>
 						<!-- <li>
 							<h3>Sofronia</h3>
 							<p>Blanche con ibisco 5% <br><em>Birrificio MC-77</em></p>
 						</li> -->
-						<!-- <li>
+					        <li>
 							<h3>Palmares</h3>
 							<p>Red Ale 5,6% <br><em>Birrificio dei Castelli</em></p>
-						</li> -->
+						</li>
 						<li>
 							<h3>Ape Regina</h3>
 							<p>Blonde Ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
@@ -502,10 +502,10 @@
 								<h3>Hattori Hanzo 50cl<span class="price">6</span></h3>
 								<p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
 							</li> -->
-							<!-- <li>
+							<li>
 								<h3>Calix 33cl<span class="price">6</span></h3>
 								<p>Stout 6,7% <br><em>Birrificio dei Castelli</em></p>
-							</li> -->
+							</li>
 							<!-- <li>
 								<h3>Lu Carzolà 33cl<span class="price">6</span></h3>
 								<p>Coffee stout all'anice 8% <br><em>Birrificio MC-77</em></p>
