--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 	<div class="panel-home-n">
 		<!-- <div class="row panel">
 			<div class="medium-12 large-12 columns">
-				<h1>Aperture Speciali</h1>
-				<p>Mercoledì 8 Marzo, in occasione della Festa della Donna siamo aperti. Vi aspettiamo.</p>
+				<h1>Pasqua e Pasquetta</h1>
+				<p>I giorni di pasqua e pasquetta siamo chiusi.</p>
 				<p>Tanti Auguri di Buone Feste da tutti noi e che il 2023 porti a ciascuno gioia e felicità. Ci rivediamo Giovedì 5 Gennaio.<p>
 			</div>
 		</div> -->
