--- a/menu/index.html
+++ b/menu/index.html
@@ -486,10 +486,14 @@
 								<h3>Wanda 50cl<span class="price">6</span></h3>
 								<p>Ipa 6,9% <br><em>Birrificio Mukkeller</em></p>
 							</li> -->
-							<!-- <li>
+							<li>
+								<h3>Ridopoco 50cl<span class="price">6</span></h3>
+								<p>American Pale Ale 6,2% <br><em>Birrificio Mukkeller</em></p>
+							</li>
+							<li>
 								<h3>Tulio 50cl<span class="price">6</span></h3>
 								<p>Rye IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
-							</li> -->
+							</li>
 							<!-- <li>
 								<h3>Marina 50cl<span class="price">6</span></h3>
 								<p>American pale ale 6,4% <br><em>Birrificio Mukkeller</em></p>
@@ -498,10 +502,10 @@
 								<h3>Space Pigs 50cl<span class="price">6</span></h3>
 								<p>Doppia IPA 8% <br><em>Birrificio Mukkeller</em></p>
 							</li> -->
-							<!-- <li>
+							<li>
 								<h3>Hattori Hanzo 50cl<span class="price">6</span></h3>
 								<p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
-							</li> -->
+							</li>
 							<li>
 								<h3>Calix 33cl<span class="price">6</span></h3>
 								<p>Stout 6,7% <br><em>Birrificio dei Castelli</em></p>
