--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 		</div>
 	</div> -->
 	<div class="panel-home-n">
-		<!-- <div class="row panel">
+		<div class="row panel">
 			<div class="medium-12 large-12 columns">
-				<h1>Pasqua e Pasquetta</h1>
-				<p>I giorni di pasqua e pasquetta siamo chiusi.</p>
-				<p>Tanti Auguri di Buone Feste da tutti noi e che il 2023 porti a ciascuno gioia e felicità. Ci rivediamo Giovedì 5 Gennaio.<p>
+				<h1>Lunedì 24 aprile</h1>
+				<p>aperti dalle ore 19 alle 23.</p>
+			
 			</div>
 		</div> -->
 		<div class="row">
