--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</div>
 	</div> -->
 	<div class="panel-home-n">
-		<div class="row panel">
+		<!-- <div class="row panel">
 			<div class="medium-12 large-12 columns">
 				<h1>Lunedì 24 aprile</h1>
 				<p>aperti dalle ore 19 alle 23.</p>
