--- a/asporto/index.html
+++ b/asporto/index.html
@@ -70,7 +70,7 @@
 		</div>
 		<div class="row">
 			<div class="medium-12 large-12 columns">
-				<p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>21:30</strong>.</p>
+				<p>Dal <strong>Mercoledì</strong> alla <strong>Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
 				<!-- <p style="margin-bottom: 0px;" >Nota bene:</p> -->
 				<!-- <ul class="disc">
 					<li>Dato l'elevato afflusso di ospiti al ristorante, nei mesi di luglio e agosto non riusciamo a garantire asporti dopo le 19.30.</li>
