--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 						<ul class="orari-footer-schedule no-bullet">
 							<li><span>Lunedì:</span>chiuso</li>
 							<li><span>Martedì:</span>chiuso</li>
-							<li><span>Mercoledì:</span>chiuso</li>
+							<li><span>Mercoledì:</span>19 - 22</li>
 							<li><span>Giovedì:</span>19 - 22</li>
 							<li><span>Venerdì:</span>19 - 22</li>
 							<li><span>Sabato:</span>19 - 23</li>
