--- a/menu/index.html
+++ b/menu/index.html
@@ -310,6 +310,11 @@
 								<small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
 							</li>
 							<li>
+								<h3>Panna Cotta>span class="price">5</span></h3>
+								<p>Ricoperta di cioccolato o frutti di bosco
+								<small>Contiene: Latte</small></p>
+							</li>
+							<li>
 								<h3>Blondie<span class="price">5</span></h3>
 								<p>Brownie con nocciole. Servito con crema al mascarpone e rhum
 								<small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
