--- a/menu/index.html
+++ b/menu/index.html
@@ -310,7 +310,7 @@
 								<small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
 							</li>
 							<li>
-								<h3>Panna Cotta>span class="price">5</span></h3>
+								<h3>Panna Cotta<span class="price">5</span></h3>
 								<p>Ricoperta di cioccolato o frutti di bosco
 								<small>Contiene: Latte</small></p>
 							</li>
