--- a/menu/index.html
+++ b/menu/index.html
@@ -311,7 +311,7 @@
 							</li>
 							<li>
 								<h3>Panna Cotta<span class="price">5</span></h3>
-								<p>Ricoperta di cioccolato o frutti di bosco
+								<p>Morbida e vellutata. Ricoperta a scelta con cioccolato o frutti di bosco
 								<small>Contiene: Latte</small></p>
 							</li>
 							<li>
