update website for production

--- a/checkout-landing.html
+++ b/checkout-landing.html
@@ -85,7 +85,7 @@
                     </fieldset>
                 </div>
                 <div class="small-12 medium-8 large-7 cell extra-space">
-                    <p>Il tuo ordine è confermato. A breve riceverai una email con i dettagli. Se non dovessi ricevere l'email, verifica che non sia nello spam</p>
+                    <p>Il tuo ordine è confermato. A breve riceverai una email con i dettagli. Se non dovessi ricevere l'email, verifica che non sia nella spam</p>
                     <p>Grazie</p>
                 </div>
             </div>
