--- a/consulta.html
+++ b/consulta.html
@@ -88,7 +88,7 @@
                 <div class="small-12 medium-8 cell clearfix">
                     <button type="button" id="cancel" class="button hollow secondary extra-space-button float-left">Cancella Prenotazione</button>
                     <button type="button" id="modify" class="button extra-space-button float-right">Modifica Prenotazione</button>
-                    <button type="button" id="new" class="button extra-space-button float-right" href="riserva-un-tavolo.html">Fai una nuova prenotazione</button>
+                    <button type="button" id="new" class="button extra-space-button float-right" href="./">Fai una nuova prenotazione</button>
                 </div>
             </div>
         </div>
