--- a/menu.html
+++ b/menu.html
@@ -305,7 +305,7 @@
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/AlettediPolloPiccanti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Alette di Pollo Piccanti">
-    								<h3>Alette di Pollo Piccanti.<span class="price ">5,5</span></h3>
+    								<h3>Alette di Pollo Piccanti<span class="price ">5,5</span></h3>
     								<p>Piccanti.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
